--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <title>Amazon 2.0</title>
+    <title>Welcome to BookStore</title>
   </head>
   <body>
     <div id="root"></div>
